--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@import-normalize;
+
+@import url("https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Indie+Flower&family=Kalam&family=Permanent+Marker&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@700&family=Roboto&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  position: relative;
+}
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+* {
+  margin: 0px;
+  padding: 0px;
 }
