delete test skeleton, hover on listItem

--- a/src/components/CharacterItem/CharacterItem.module.scss
+++ b/src/components/CharacterItem/CharacterItem.module.scss
@@ -20,6 +20,10 @@
   @media (min-width: 922px) {   
     width: 240px;
   }
+
+  &:hover{
+    transform: scale(1.02)
+  }
 }
 .link {
   text-decoration: none;  
